--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -9,7 +9,7 @@ build:
 
 python:
   install:
-    - requirements: docs/requirements.txt
+    - requirements: docs/requirements.yaml
 
 sphinx:
   configuration: docs/conf.py
