--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -9,7 +9,12 @@ build:
 
 python:
   install:
+    - method: pip
     - requirements: docs/requirements.yaml
+    - path: .
 
 sphinx:
   configuration: docs/conf.py
+
+conda:
+  environment: docs/requirements.yaml
